--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,21 @@
-theme: jekyll-theme-minimal
+## Settings
+title: 猪猪屋
+owner: "ZhuSong"
+url: "https://blog.lasong.com.cn/"
+baseurl: "/zhusonger.github.io"
+permalink: /:title/
+description: ""
+markdown: kramdown
+webrick:
+  headers:
+    Access-Control-Allow-Origin: "*"
+## Global Variables
+email: "song.zhu@lasong.com.cn"
+github: "zhusonger/zhusonger.github.io"
+# path to: css/, fonts/, img/ and js/
+assets_path: "/assets" # i.e. "/assets" 
+statement: "Designed by DeerRIDER, All Rights Reserved"
+# default max toc levels: 1 - 6 (h1 - h6)
+toc_level: 3
+# texts randomly displayed in background
+bgtext: "αβγδεζηθικλμνξοπρστυφχψω∷∫∮∝∞∧∨∑∏∪∩∈∵∴⊥‖∠⌒⊙≌√"
