--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 ## Settings
-title: 猪猪屋
-owner: "ZhuSong"
-url: "https://blog.lasong.com.cn/"
-baseurl: "/zhusonger.github.io"
+title: pRoJEct-NeGYa
+owner: "DeerRIDER"
+url: "https://akiritsu.github.io"
+baseurl: "/pRoJEct-NeGYa"
 permalink: /:title/
 description: ""
 markdown: kramdown
@@ -10,8 +10,8 @@ webrick:
   headers:
     Access-Control-Allow-Origin: "*"
 ## Global Variables
-email: "song.zhu@lasong.com.cn"
-github: "zhusonger/zhusonger.github.io"
+email: "akiritsu@outlook.com"
+github: "akiritsu/pRoJEct-NeGYa"
 # path to: css/, fonts/, img/ and js/
 assets_path: "/assets" # i.e. "/assets" 
 statement: "Designed by DeerRIDER, All Rights Reserved"
