--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: 猪猪屋
 owner: "Zhusong"
 url: "https://blog.lasong.com.cn"
-baseurl: "/pRoJEct-NeGYa"
+baseurl: "/zhusonger.github.io"
 permalink: /:title/
 description: ""
 markdown: kramdown
