--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ github: "zhusonger/zhusonger.github.io"
 assets_path: "/assets" # i.e. "/assets" 
 statement: "Zhusong, All Rights Reserved"
 aq: "浙ICP备20003389号-1"
+aqlink: "http://www.beianbeian.com/beianxinxi/033786268ded2b3d32735d3d54fe88e5.html"
 # default max toc levels: 1 - 6 (h1 - h6)
 toc_level: 3
 # texts randomly displayed in background
