--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ## Settings
 title: 猪猪屋
 owner: "Zhusong"
-url: "https://www.lasong.com.cn"
+url: ""
 baseurl: ""
 permalink: /:title/
 description: ""
